--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,11 @@
   <url>http://maven.apache.org</url>
   
   <properties>
-	<org.springframework.version>5.2.2.RELEASE</org.springframework.version>
+	<org.springframework.version>5.3.23</org.springframework.version>
+	<org.springframework.security.version>5.6.9</org.springframework.security.version>
+	<org.hibernate.version>5.4.24.Final</org.hibernate.version>
+	<javax.servlet.version>1.2</javax.servlet.version>
+	<org.aspectj.varsion>1.9.6</org.aspectj.varsion>
 	<maven.compiler.target>1.8</maven.compiler.target>
 	<maven.compiler.source>1.8</maven.compiler.source>
   </properties>
@@ -70,19 +74,19 @@
 	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-web</artifactId>
-	    <version>${org.springframework.version}</version>
+	    <version>${org.springframework.security.version}</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.springframework.security</groupId>
 	    <artifactId>spring-security-config</artifactId>
-	    <version>${org.springframework.version}</version>
+	    <version>${org.springframework.security.version}</version>
 	</dependency>
 	
 	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
 	<dependency>
 	    <groupId>com.fasterxml.jackson.core</groupId>
 	    <artifactId>jackson-databind</artifactId>
-	    <version>2.11.3</version>
+	    <version>2.12.7.1</version>
 	</dependency>
 	
 	
@@ -90,37 +94,37 @@
 	<dependency>
 	    <groupId>org.aspectj</groupId>
 	    <artifactId>aspectjweaver</artifactId>
-	    <version>1.9.6</version>
+	    <version>${org.aspectj.varsion}</version>
 	    <scope>runtime</scope>
 	</dependency>
 	<dependency>
 	    <groupId>org.aspectj</groupId>
 	    <artifactId>aspectjrt</artifactId>
-	    <version>1.9.6</version>
+	    <version>${org.aspectj.varsion}</version>
 	</dependency>
 
 	<!-- MySQL -->
 	<dependency>
 	    <groupId>mysql</groupId>
 	    <artifactId>mysql-connector-java</artifactId>
-	    <version>8.0.19</version>
+	    <version>8.0.28</version>
 	</dependency>
 	
 	<!-- Hibernate -->
 	<dependency>
 	    <groupId>org.hibernate</groupId>
 	    <artifactId>hibernate-core</artifactId>
-	    <version>5.4.12.Final</version>
+	    <version>${org.hibernate.version}</version>
 	</dependency>
 	<dependency>
 	    <groupId>org.hibernate.validator</groupId>
 	    <artifactId>hibernate-validator</artifactId>
-	    <version>6.1.2.Final</version>
+	    <version>6.1.5.Final</version>
 	</dependency>
       <dependency>
          <groupId>org.hibernate</groupId>
          <artifactId>hibernate-c3p0</artifactId>
-         <version>5.4.12.Final</version>
+         <version>${org.hibernate.version}</version>
      </dependency>
      <dependency>
          <groupId>com.mchange</groupId>
@@ -132,13 +136,13 @@
 	<dependency>
 	    <groupId>javax.servlet.jsp.jstl</groupId>
 	    <artifactId>jstl-api</artifactId>
-	    <version>1.2</version>
+	    <version>${javax.servlet.version}</version>
 	</dependency>
 	
 	<dependency>
 	    <groupId>javax.servlet</groupId>
 	    <artifactId>jstl</artifactId>
-	    <version>1.2</version>
+	    <version>${javax.servlet.version}</version>
 	</dependency>
 	
 	<!-- Lombok -->
